--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 ## Eclipse
 #################
 
+#
+# *.meta
+
+
 *.csproj
 *.sln
 Library
@@ -63,7 +67,6 @@ build/
 *_i.c
 *_p.c
 *.ilk
-*.meta
 *.obj
 *.pch
 *.pdb
